# rust-web-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2023-12-22-020550_crates/: up.sql
migrations/2023-12-23-062739_create_users/: up.sql
migrations/2023-12-23-062746_create_roles/: up.sql
migrations/2023-12-23-062752_create_users_roles/: up.sql
src/: commands.rs  lib.rs  main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
tests/: crates.rs  rustaceans.rs
tests/common/: mod.rs
