[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1", features = ["chrono"]}
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = "0.4"
